# idea-impl2

./: .cursorignore  .gitignore  .vlm_cache.sqlite  BACKLOG_AUDIT.md  COMMANDS.md  MANIFEST.json  README.md  agent.py  cloud_setup.sh  constitution.yaml  done.txt  dropbox.md  extract.py  fix_missing_plans.py  fix_stuck_tasks.py  health_check.py  import_cloud_zip.py  import_zip.py  install_all.py  llm_interface.py  master_ideas.md  master_ideas_consolidated.md  master_reqs.txt  mission.yaml  polish_queue.md  pyproject.toml  quality_scorer.py  requirements-finetune.txt  requirements.txt  reset_budget_exceeded.py  submission_log.csv  sweep_all.py  sweep_results.json  sync_cloud.sh  test.db  test_budget_ladder.py  test_cloud_pipeline_improvements.py  test_complete_gate.py  test_corpus_gate.py  test_corpus_lineage.py  (+25 more)
.pipeline/projects/agentflow_drophip/workspace/: IMPLEMENTATION_PLAN.md  pyproject.toml
.pipeline/projects/agentflow_drophip/workspace/tests/: conftest.py  test_agents.py  test_business_spec.py  test_dag.py  test_exceptions.py  test_intent_parser.py  test_orchestrator.py  test_task.py  test_workflow.py  test_workflow_engine.py
.pipeline/projects/agentic_mirroring_game/workspace/: cli.py  import_zip.py  pyproject.toml
.pipeline/projects/agentic_mirroring_game/workspace/agentic_mirroring_game/: __init__.py  demo.py
.pipeline/projects/agentic_mirroring_game/workspace/core/: empire.py  game_engine.py  mirroring.py
.pipeline/projects/agentic_mirroring_game/workspace/tests/: test_empire.py  test_mirroring.py  test_models.py  test_player.py
.pipeline/projects/ai_movie_generation_suite/workspace/: README.md  characters.json  import_zip.py  pyproject.toml  test_harness_capabilities.py
.pipeline/projects/ai_movie_generation_suite/workspace/ai_movie_gen_suite/: __init__.py  __main__.py  cli.py  config.py  models.py
.pipeline/projects/ai_movie_generation_suite/workspace/animatic/: audio_cues.json  preview_manifest.json  timeline.json
.pipeline/projects/ai_movie_generation_suite/workspace/output/: the_lying_city.json
.pipeline/projects/audiobook_script_pipeline/workspace/: DEPLOYMENT.md  Dockerfile  MANIFEST.in  README.md  __main__.py  docker-compose.yml  pyproject.toml  requirements.txt  sample_manuscript.txt
.pipeline/projects/automatedclientops_manager/workspace/: Dockerfile  __init__.py  email_tool.py  invoice.py  manager.py  models.py  pyproject.toml  sop_executor.py  test_workspace.py
.pipeline/projects/beatsheet_generator/workspace/: __init__.py  generator.py  pyproject.toml
.pipeline/projects/book_researcher/workspace/: README.md  __init__.py  gap_clustering.py  gap_extractor.py  models.py  niche_profiler.py  pipeline.py  pyproject.toml  review_aggregator.py  toc_generator.py
.pipeline/projects/chronovision2/workspace/: README.md  pyproject.toml  requirements.txt  tasks.md  test_hypothesis_manager.py  test_import_zip.py
.pipeline/projects/code_review_diff_summarizer/workspace/: pyproject.toml
.pipeline/projects/code_reviewer/workspace/: pyproject.toml
.pipeline/projects/config_schema_validator/workspace/: pyproject.toml
.pipeline/projects/contract_extractor/workspace/: pyproject.toml
.pipeline/projects/cross_project_linter/workspace/: pyproject.toml
.pipeline/projects/csv_data_pipeline_builder/workspace/: __init__.py  loader.py  nodes.py  pipeline.py  pyproject.toml  tools.py  tui.py
.pipeline/projects/dependencyvuln_code_scanner/workspace/: Dockerfile  README.md  SUMMARY.md  action.yml  pyproject.toml
.pipeline/projects/docsai_documentation_generator/workspace/: _debug_ts.py  docsai.yaml  pyproject.toml
.pipeline/projects/dropgentic/workspace/: pyproject.toml
.pipeline/projects/dropgentic/workspace/dropgentic/: cli.py  (+3 more)
.pipeline/projects/droppain/workspace/: CHANGELOG.md  Dockerfile  README.md  cli.py  config.py  docker-compose.yml  logging_config.py  models.py  planner.py  product_store.py  pyproject.toml  sample_env.txt  scheduler.py
.pipeline/projects/dropsearch/workspace/: IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  sweep_all.py
.pipeline/projects/extraction/workspace/: README.md  __init__.py  __main__.py  conftest.py  import_cloud_zip.py  pyproject.toml
.pipeline/projects/ffo/workspace/: DEPLOY.md  README.md  __init__.py  __main__.py  cli.py  pyproject.toml  test_dependency_system.py  valuation.py
.pipeline/projects/finance_tracker/workspace/: pyproject.toml
.pipeline/projects/financial_document_analyzer/workspace/: MANIFEST.in  parsers.py  pyproject.toml  reporters.py  requirements.txt  sample_financial.csv  test_temp.csv
.pipeline/projects/financial_portfolio_simulator/workspace/: exceptions.py  pyproject.toml  test_integration.py
.pipeline/projects/forensic/workspace/: README.md  __init__.py  cli.py  comparison.py  config.py  config.yaml  conftest.py  database.py  forensic.db  models.py  normalization.py  pyproject.toml  requirements.txt  review.md  setup.py
.pipeline/projects/forensic_accounting_suite/: main.py  pyproject.toml
.pipeline/projects/forensic_accounting_suite/state/: context_cache.json  current_idea.json  master_plan.md
.pipeline/projects/forensic_accounting_suite/tests/: test_anomaly_detection.py  test_correlation.py  test_models.py  test_pipeline.py  test_report_generation.py  test_sources.py
.pipeline/projects/forensic_accounting_suite/workspace/: __init__.py  pipeline.py  pyproject.toml  setup.cfg
.pipeline/projects/human_in_the_loop_reviewer/workspace/: DEPLOYMENT.md  README.md  __init__.py  __main__.py  exceptions.py  pyproject.toml  store.py
.pipeline/projects/newsletter_online_profit_environment_for_llm_rl_training_and_sims/: config.py  pyproject.toml
.pipeline/projects/newsletter_online_profit_environment_for_llm_rl_training_and_sims/profit_env/: __init__.py  cli.py  config.py  env.py  simulator.py  state.py
.pipeline/projects/newsletter_online_profit_environment_for_llm_rl_training_and_sims/state/: context_cache.json  current_idea.json
.pipeline/projects/newsletter_online_profit_environment_for_llm_rl_training_and_sims/tests/: test_newsletter_online_profit_env.py
(+5330 files in other folders)
