[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "forensic-accounting-suite"
version = "0.1.0"
description = "Forensic Accounting Suite for detecting financial anomalies and corruption"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["forensic_accounting_suite", "forensic_accounting_suite.core", "forensic_accounting_suite.engine", "forensic_accounting_suite.sources"]
