[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profit-env"
version = "0.1.0"
description = "Newsletter & online profit environment for LLM RL training and simulations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
profit-env = "profit_env.cli:main"

[tool.setuptools.packages.find]
include = ["profit_env*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["profit_env"]

[tool.coverage.report]
show_missing = true
skip_empty = true
