[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-mirroring-game"
version = "0.1.0"
description = "Agentic Mirroring Game — Build your empire in-game, mirror to real life"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
agentic-mirroring-game = "agentic_mirroring_game.cli:main"

[tool.setuptools.packages.find]
include = ["agentic_mirroring_game*"]
