[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automatedclientops-manager"
version = "1.0.0"
description = "Combine the drop-servicing SOP executor with the email tool to handle client communication, file delivery, and invoice generation autonomously."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Developer" }
]
dependencies = [
    "pyyaml",
    "fpdf",
]

[project.scripts]
auto-client-ops = "manager:main"

[tool.setuptools]
py-modules = ["manager", "email_tool", "invoice", "models", "sop_executor"]
