[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "book-researcher"
version = "0.1.0"
description = "Find underserved book niches by analyzing reviews of top-selling information books"
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
book-researcher = "book_researcher.cli:main"

[tool.setuptools.packages.find]
include = ["book_researcher*"]
