[project]
name = "code_review_diff_summarizer"
version = "0.1.0"
description = "CLI tool that reads git diff output and summarizes changes."
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
