[project]
name = "config_schema_validator"
version = "0.1.0"
description = "Linter that validates pipeline YAML definitions against typed schemas before execution."
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
config-validator = "config_validator.cli:app"
