[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cross_project_linter"
version = "0.1.0"
description = "Custom unified linter for pipeline projects"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cross_project_linter = "cross_project_linter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cross_project_linter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
