[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "csv-data-pipeline-builder"
version = "0.1.0"
description = "DAG-based CSV pipeline builder with filter/join/pivot/aggregate and YAML DSL"
requires-python = ">=3.10"
dependencies = []  # stdlib only for Phase 1-2; pyyaml added for YAML loader, rich for Phase 3 TUI

[project.optional-dependencies]
yaml = ["pyyaml>=6"]
tui = ["rich>=13", "pyyaml>=6"]
dev = ["pytest>=7", "pytest-cov", "pyyaml>=6"]

[project.scripts]
csv-pipeline = "csv_data_pipeline_builder.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
