[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depvuln"
version = "0.1.0"
description = "A CLI utility that audits project dependency trees, cross-references CVE databases, and outputs prioritized remediation reports."
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
depvuln = "depvuln.cli:cli"

[tool.setuptools.packages.find]
include = ["depvuln*"]
