[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsai"
version = "0.1.0"
description = "AI-powered technical documentation assistant"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.23.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
docsai = "docsai.cli:main"

[tool.setuptools.packages.find]
include = ["docsai*"]
