[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dropgentic"
version = "0.1.0"
description = "Dropshipping and agentic commerce planner"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dropgentic = "dropgentic.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dropgentic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
