[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropgentic"
version = "0.1.0"
description = "Dropshipping and agentic commerce planner"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
dropgentic = "dropgentic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
