[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dropsearch"
version = "0.1.0"
description = "Extract product catalogs from e-commerce stores (Shopify, WooCommerce, generic)."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.3",
]

[project.scripts]
dropsearch = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
