[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dropsearch"
version = "0.1.0"
description = "Dropship competitor researcher and business gameplan generator"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dropsearch = "dropsearch.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dropsearch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
