[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "finance_tracker"
version = "0.1.0"
description = "Personal finance tracker: CSV import, merchant categorization, monthly reports, anomaly alerts"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
finance_tracker = "finance_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["finance_tracker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
