[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finalyzer"
version = "0.1.0"
description = "Financial document analyzer: extract metrics and margins from CSV and PDF financial statements."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Finalyzer Team"}
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "pdfplumber>=0.9",
]

[project.scripts]
finalyzer = "financial_document_analyzer.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["financial_document_analyzer*"]
