[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "financial-portfolio-simulator"
version = "0.1.0"
description = "Monte Carlo risk analysis and strategy training for stock and crypto portfolios"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["financial_portfolio_simulator*"]
