[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic"
version = "0.1.0"
description = "Forensic Suite - Fraud detection analysis for SEC EDGAR filings"
requires-python = ">=3.8"
dependencies = [
    "sec-importer>=0.1.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
forensic = "forensic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
