[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "forensic-accounting-suite"
version = "0.1.0"
description = "OSINT for corporate tracking — shipping manifests, procurement data, government contracts, corporate registries, SEC filings with cross-correlation and anomaly detection."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["forensic_accounting_suite*"]
