[metadata]
name = forensic-accounting-suite
version = 0.1.0
description = OSINT for corporate tracking with cross-correlation and anomaly detection
author = Forensic Accounting Suite Contributors
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    pydantic>=2.0

[options.packages.find]
include =
    forensic_accounting_suite*
