[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "human-in-the-loop-reviewer"
version = "0.3.0"
description = "A Python library for managing manual review checkpoints with blocking wait-for-response semantics."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Agent Team", email = "agents@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
human-in-the-loop-reviewer = "human_in_the_loop_reviewer.cli:main"

[tool.setuptools.packages.find]
include = ["human_in_the_loop_reviewer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
